# whatif-worldcup-manager

./: .gitignore  README.md
.kiro/specs/fifa-match-predictor/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .dockerignore  pyproject.toml
backend/app/: main.py  models.py  pdf_parser.py  prediction_engine.py  session.py
backend/tests/: test_api.py  test_delete_session_endpoint.py  test_e2e_flow.py  test_get_session_endpoint.py  test_models_pbt.py  test_models_validation.py  test_pdf_parser.py  test_pdf_parser_integration.py  test_predict_endpoint.py  test_prediction_engine.py  test_prediction_pbt.py  test_session.py  test_upload.py
backend/tests/fixtures/: generate_sample_report.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: lineup.pbt.test.ts
frontend/src/api/: client.ts
frontend/src/components/: ClearSessionButton.tsx  PlayerSwapModal.tsx  SessionExpiredBanner.tsx  TeamLineup.tsx
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useApi.ts  useInactivityTimer.ts  useSessionRestore.ts
frontend/src/types/: index.ts
frontend/src/views/: ExtractionSummary.tsx  LineupEditorView.tsx  ResultView.tsx  UploadView.tsx
scripts/: deploy-aws.sh
