[project]
name = "whatif-worldcup-manager"
version = "0.1.0"
description = "FIFA Match Predictor - What-If World Cup Manager backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pdfplumber>=0.10.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "reportlab>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
